--- a/Inicio.css
+++ b/Inicio.css
@@ -228,6 +228,58 @@
   margin: 18px 13px 0;
 }
 
+.my-form {
+  /* Estilos generales del formulario */
+  padding: 20px;
+  background-color: #f2f2f2;
+  margin: 20px auto;
+  width: 70%;
+}
+
+.field {
+  /* Estilos de los campos del formulario */
+  margin-bottom: 10px;
+}
+
+.form-label {
+  /* Estilos de las etiquetas de los campos del formulario */
+  display: block;
+  font-weight: bold;
+}
+
+.form-input {
+  /* Estilos de los campos de entrada */
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.form-textarea {
+  /* Estilos del campo de texto grande */
+  width: 100%;
+  height: 150px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.form-button {
+  /* Estilos del botón de envío */
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-button:hover {
+  /* Estilos al pasar el cursor sobre el botón de envío */
+  background-color: #45a049;
+}
+
+
 @media (max-width: 1199px) {
   .u-section-2 .u-image-1 {
     background-position: 50% 50%;
@@ -370,7 +422,9 @@
   .u-section-2 .u-shape-1 {
     width: 340px;
   }
-} .u-section-3 {
+} 
+
+.u-section-3 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.9), rgba(0,0,0,0.9)), url("images/a1fe7d877996c19cd8d1f374bee773ddd99dabdc2fc10e5579a551bb5bb961c5b76d0f49ce8a62abd77fe0f9b23e220cd690b7478a5c05d5f68096_1280.jpg");
   background-position: 50% 50%;
   background-size: auto 130%;
@@ -462,9 +516,9 @@
     min-height: 950px;
   }
 
-  .u-section-3 .u-repeater-1 {
+  /* .u-section-3 .u-repeater-1 {
     grid-template-columns: repeat(undefined, NaN%);
-  }
+  } */
 
   .u-section-3 .u-repeater-2 {
     min-height: 374px;
